force-app/main/default/objects/Out_of_Office__c/Out_of_Office__c.object-meta.xml
<CustomObject>
    <description>To capture out of office agent information</description>
    <label>Out of Office</label>
    <nameField>
        <displayFormat>OOO-{00000}</displayFormat>
        <label>Out of Office Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Out of Offices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>