force-app/main/default/objects/Out_of_Office__c/fields/Business_Rules__c.field-meta.xml
<CustomField>
    <fullName>Business_Rules__c</fullName>
    <label>Business Rules</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>