force-app/main/default/objects/Out_of_Office__c/fields/Current_Contact_Approver__c.field-meta.xml
<CustomField>
    <fullName>Current_Contact_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Contact Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Out of Offices (Current Contact Approver)</relationshipLabel>
    <relationshipName>Out_of_Offices1</relationshipName>
    <type>Lookup</type>
</CustomField>