force-app/main/default/objects/Out_of_Office__c/fields/Current_Email_Approver__c.field-meta.xml
<CustomField>
    <fullName>Current_Email_Approver__c</fullName>
    <label>Current Email Approver</label>
    <type>Email</type>
</CustomField>