force-app/main/default/objects/Out_of_Office__c/fields/Current_User_Approver__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current User Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Out_of_Offices2</relationshipName>
    <type>Lookup</type>
</CustomField>