force-app/main/default/objects/Out_of_Office__c/fields/isSelectBusinessRuleAccess__c.field-meta.xml
<CustomField>
    <fullName>isSelectBusinessRuleAccess__c</fullName>
    <formula>IF(OR($Profile.Name == &quot;Customer Account Team&quot; , $Profile.Name == &quot;System Administrator&quot;, $Permission.Goverance_Team_Access), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isSelectBusinessRuleAccess</label>
    <type>Checkbox</type>
</CustomField>