force-app/main/default/objects/Out_of_Office__c/fields/New_Contact_Approver__c.field-meta.xml
<CustomField>
    <fullName>New_Contact_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Contact Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Out of Offices</relationshipLabel>
    <relationshipName>Out_of_Offices</relationshipName>
    <type>Lookup</type>
</CustomField>