force-app/main/default/objects/Out_of_Office__c/fields/New_Email_Approver__c.field-meta.xml
<CustomField>
    <fullName>New_Email_Approver__c</fullName>
    <label>New Email Approver</label>
    <type>Email</type>
</CustomField>