force-app/main/default/objects/Out_of_Office__c/fields/New_User_Approver__c.field-meta.xml
<CustomField>
    <fullName>New_User_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New User Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Out_of_Offices3</relationshipName>
    <type>Lookup</type>
</CustomField>