force-app/main/default/objects/Out_of_Office__c/recordTypes/User.recordType-meta.xml
<RecordType>
    <fullName>User</fullName>
    <active>true</active>
    <label>User</label>
</RecordType>