force-app/main/default/objects/Out_of_Office__c/validationRules/Validate_BRsApprover.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_BRsApprover</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISBLANK(  New_Contact_Approver__c  ),
ISBLANK(   New_Email_Approver__c   ),
ISBLANK(   New_User_Approver__c  )
)</errorConditionFormula>
    <errorMessage>Please Enter an Approver to Continue</errorMessage>
</ValidationRule>