force-app/main/default/objects/Out_of_Office__c/validationRules/Validate_EndDateAndStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_EndDateAndStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
    <errorMessage>End Date must be greater than or equal to start Date.</errorMessage>
</ValidationRule>