force-app/main/default/objects/Out_of_Office__c/validationRules/Validate_MorethanOneApprovers.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_MorethanOneApprovers</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(NOT(ISBLANK(New_Contact_Approver__c)),NOT(ISBLANK(New_User_Approver__c)),NOT(ISBLANK(New_Email_Approver__c)) 
),
AND(NOT(ISBLANK(New_Contact_Approver__c)),NOT(ISBLANK(New_User_Approver__c))
),
AND(NOT(ISBLANK(New_Contact_Approver__c)),NOT(ISBLANK(New_Email_Approver__c))
),
AND(NOT(ISBLANK(New_Email_Approver__c)),NOT(ISBLANK(New_User_Approver__c))
)
)</errorConditionFormula>
    <errorMessage>Please populate only one form of New Approver</errorMessage>
</ValidationRule>