force-app/main/default/objects/Out_of_Office__c/validationRules/Validate_SameApprover.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_SameApprover</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
AND(NOT(ISBLANK(Current_User_Approver__c)),NOT(ISBLANK(New_User_Approver__c)),Current_User_Approver__c=New_User_Approver__c),
AND(NOT(ISBLANK(Current_User_Approver__r.Email)),NOT(ISBLANK(New_Email_Approver__c)),Current_User_Approver__r.Email=New_Email_Approver__c),
AND(NOT(ISBLANK(Current_User_Approver__r.Email)),NOT(ISBLANK(New_Contact_Approver__r.Email)),Current_User_Approver__r.Email=New_Contact_Approver__r.Email),
AND(NOT(ISBLANK(Current_Email_Approver__c)),NOT(ISBLANK(New_User_Approver__r.Email)),Current_Email_Approver__c=New_User_Approver__r.Email),
AND(NOT(ISBLANK(Current_Email_Approver__c)),NOT(ISBLANK(New_Email_Approver__c)),Current_Email_Approver__c=New_Email_Approver__c),
AND(NOT(ISBLANK(Current_Email_Approver__c)),NOT(ISBLANK(New_Contact_Approver__r.Email)),Current_Email_Approver__c=New_Contact_Approver__r.Email),
AND(NOT(ISBLANK(Current_Contact_Approver__r.Email)),NOT(ISBLANK(New_User_Approver__r.Email)),Current_Contact_Approver__r.Email=New_User_Approver__r.Email),
AND(NOT(ISBLANK(Current_Contact_Approver__r.Email)),NOT(ISBLANK(New_Email_Approver__c)),Current_Contact_Approver__r.Email=New_Email_Approver__c),
AND(NOT(ISBLANK(Current_Contact_Approver__r.Email)),NOT(ISBLANK(New_Contact_Approver__r.Email)),Current_Contact_Approver__r.Email=New_Contact_Approver__r.Email)
)</errorConditionFormula>
    <errorMessage>The User selected cannot be the existing approver and the new approver for this business rule, please select a different user.</errorMessage>
</ValidationRule>