force-app/main/default/objects/Out_of_Office__c/validationRules/Validate_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>OR( AND(ISNEW() &amp;&amp; Start_Date__c &lt; TODAY()),
    AND(  ISCHANGED(Start_Date__c) &amp;&amp;  Start_Date__c  &lt;  PRIORVALUE(Start_Date__c ) )
)</errorConditionFormula>
    <errorMessage>Start Date should be today or Future Date.</errorMessage>
</ValidationRule>