force-app/main/default/objects/Out_of_Office__c/listViews/Contact_Approvers_List_View.listView-meta.xml
<ListView>
    <fullName>Contact_Approvers_List_View</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Current_Contact_Approver__c</columns>
    <columns>New_Contact_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Out_of_Office__c.Contact</value>
    </filters>
    <label>Contact Approvers List View</label>
</ListView>